--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,8 @@
     
     {% block corecss %}
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    {% endblock %}
+        <link rel="stylesheet" href="{% static 'css/base.css' %}">
+        {% endblock %}
 
     {% block extracss %}
     {% endblock %}
@@ -29,7 +30,64 @@
     <title>Artwitch{% block extratitle %}{% endblock %}</title>
   </head>
   <body>
-    <header class="container-fluid fixed-top"></header>
+    <header class="container-fluid fixed-top">
+      <!--top header for large screens and desktop-->
+      <div  class="row bg-white pt-4 d-none d-lg-flex" id="nav-top">
+        <div class="col-lg-4">
+          <a class="nav-link m-auto" href="#">
+            <h3>ArtWitch - handmade with love!</h3>
+          </a>
+        </div>
+        <div class="col-lg-4 align-items-center">
+          <form class="d-flex" method="GET" action="">
+            <div class="input-group">
+              <input class="form-control me-2" type="search" name= "q" placeholder="Search" aria-label="Search">
+              <button class="btn btn-sm btn-outline-dark" type="submit"><i class="bi bi-search"></i>Search</button>
+            </div>
+          </form>
+        </div>
+        <div class="d-flex justify-content-evenly col-lg-4">
+          <ul class="list-group list-group-horizontal d-flex text-center">
+              <li class="list-group-item dropdown flex-fill border-0">
+                <a href="#" class="nav-link dropdown-toggle" id="user-menu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <div class="text-center">
+                    <span><i class="bi bi-person-fill"></i></span>
+                    <p>My Account</p>
+                  </div>
+                </a>
+                <div class="dropdown-menu" aria-labelledby="user-menu">
+                  {% if request.user.is_authenticated %}
+                      {% if request.user.is_superuser %}
+                          <a href="" class="dropdown-item">Product Management</a>
+                      {% endif %}
+                      <a href="#" class="dropdown-item">My Profile</a>
+                      <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                  {% else %}
+                      <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                      <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                  {% endif %}
+                </div>
+              </li>
+              <li class="list-group-item flex-fill border-0">
+                <a class="font-weight-bold text-black nav-link" href="">
+                    <div class="text-center">
+                      <span><i class="bi bi-cart-fill"></i></span>
+                      <p class="my-0">
+                            $0.00
+                      </p>
+                    </div>
+                </a>
+              </li>
+          </ul>
+        </div>
+    </div>
+    
+    <div class="row bg-white" id="bottom-nav">
+        <nav class="navbar navbar-expand-lg navbar-light w-auto mx-auto">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+    </header>
 
     {% if messages %}
         <div class="message-container"></div>
