--- a/templates/base.html
+++ b/templates/base.html
@@ -14,8 +14,11 @@
     
     {% block corecss %}
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto&display=swap" rel="stylesheet"> 
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
-        {% endblock %}
+    {% endblock %}
 
     {% block extracss %}
     {% endblock %}
@@ -35,7 +38,7 @@
       <div  class="row bg-white pt-4 d-none d-lg-flex" id="nav-top">
         <div class="col-lg-4">
           <a class="nav-link m-auto" href="#">
-            <h3>ArtWitch - handmade with love!</h3>
+            <h3 class="logo-txt">ArtWitch - handmade with love!</h3>
           </a>
         </div>
         <div class="col-lg-4 align-items-center">
