--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,22 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block page_header %}
+    <div class="header-container">
+        <div class="row">
+            <div class="col">
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
 {% block content %}
+    <div class="container h-100">
+        <div class="row h-100">
+            <div class="col-6 my-auto">
+                <h1 class ="display-4 text-success">It works!</h1>
+            </div>
+        </div>
+    </div>
     <h1 class ="display-4 text-success">It works!</h1>
 {% endblock %}
