--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
     
     {% block corecss %}
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Roboto&display=swap" rel="stylesheet"> 
@@ -35,7 +36,7 @@
   <body>
     <header class="container-fluid fixed-top">
       <!--top header for large screens and desktop-->
-      <div  class="row bg-white pt-4 d-none d-lg-flex" id="nav-top">
+      <div  class="row bg-white pt-4 d-none d-lg-flex top-nav" id="nav-top">
         <div class="col-lg-4">
           <a class="nav-link m-auto" href="#">
             <h3 class="logo-txt">ArtWitch - handmade with love!</h3>
@@ -53,12 +54,12 @@
           <ul class="list-group list-group-horizontal d-flex text-center">
               <li class="list-group-item dropdown flex-fill border-0">
                 <a href="#" class="nav-link dropdown-toggle" id="user-menu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  <div class="text-center">
+                  <div class="text-center text-dark">
                     <span><i class="bi bi-person-fill"></i></span>
                     <p>My Account</p>
                   </div>
                 </a>
-                <div class="dropdown-menu" aria-labelledby="user-menu">
+                <div class="dropdown-menu text-dark" aria-labelledby="user-menu">
                   {% if request.user.is_authenticated %}
                       {% if request.user.is_superuser %}
                           <a href="" class="dropdown-item">Product Management</a>
@@ -72,7 +73,7 @@
                 </div>
               </li>
               <li class="list-group-item flex-fill border-0">
-                <a class="font-weight-bold text-black nav-link" href="">
+                <a class="font-weight-bold text-dark nav-link" href="">
                     <div class="text-center">
                       <span><i class="bi bi-cart-fill"></i></span>
                       <p class="my-0">
@@ -83,18 +84,24 @@
               </li>
           </ul>
         </div>
-    </div>
-    
-    <div class="row bg-white" id="bottom-nav">
+      </div>
+      <div class="row bg-white" id="bottom-nav">
         <nav class="navbar navbar-expand-lg navbar-light w-auto mx-auto">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler me-5 ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            {% include 'includes/mobile-top-header.html' %}
+            {% include 'includes/main-navigation.html' %}
+        </nav>
+      </div>
     </header>
 
     {% if messages %}
         <div class="message-container"></div>
     {% endif %}
+
+    {% block page_header %}
+    {% endblock %}
 
     {% block content %}
     {% endblock %}
