Updated Readme and typos in main nav html

--- a/templates/includes/main-navigation.html
+++ b/templates/includes/main-navigation.html
@@ -30,7 +30,7 @@
           Toys
         </a>
 
-        <div class="dropdown-menu border-0 text-dark" aria-labelledby="accessories-link">
+        <div class="dropdown-menu border-0 text-dark" aria-labelledby="toys-link">
           <a href="" class="dropdown-item">1</a>
           <a href="" class="dropdown-item">2</a>
           <a href="" class="dropdown-item">3</a>
