--- a/static/css/base.css
+++ b/static/css/base.css
@@ -21,9 +21,28 @@ body {
     height: 75px !important;
 }
 
+.main-overlay{
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    background: white;
+    z-index: -1;
+}
+
 @media (min-width: 992px){
 
     .header-container{
         padding-top: 147px;
+        width: 100%;
+    }
+}
+
+@media (max-width: 991px){
+
+    .header-container{
+        padding-top: 80px;
+        width: 100%;
     }
 }
