--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,9 +14,11 @@
     <div class="container h-100">
         <div class="row h-100">
             <div class="col-6 my-auto mx-auto">
-                <h1 class ="display-4 text-success">Call to Action</h1>
+                <h1 class ="display-4 logo-txt text-light">Special offers until end of March 2021!</h1>
+            </div>
+            <div class="col-12 mx-auto text-center">
+                <a href="{% url 'products' %}" class="btn btn-light">Shop Now!</a>
             </div>
         </div>
     </div>
-    <h1 class ="display-4 text-success">It works!</h1>
 {% endblock %}
