--- a/templates/base.html
+++ b/templates/base.html
@@ -86,7 +86,7 @@
         </div>
       </div>
       <div class="row bg-white" id="bottom-nav">
-        <nav class="navbar navbar-expand-lg navbar-light w-auto mx-auto border rounded-pill">
+        <nav class="navbar navbar-expand-lg navbar-light w-auto mx-auto">
             <button class="navbar-toggler me-5 ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
