Fixed styling errors in home page and base template

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    width: 100vw;
+   /* width: 100vw;*/
     height: calc(100vh - 147px);
     background: url('/media/land-back.jpg') no-repeat center center fixed;
     background-size: cover;
@@ -31,11 +31,17 @@ body {
     z-index: -1;
 }
 
+@media (min-width: 1200px) {
+    .container {
+      max-width: 80%;
+    }
+  }
+
 @media (min-width: 992px){
 
     .header-container{
         padding-top: 147px;
-        width: 100%;
+
     }
 }
 
