--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
       <!--top header for large screens and desktop-->
       <div  class="row bg-white pt-4 d-none d-lg-flex top-nav" id="nav-top">
         <div class="col-lg-4">
-          <a class="nav-link m-auto" href="#">
+          <a class="nav-link m-auto" href="{% url 'home' %}">
             <h3 class="logo-txt">ArtWitch - handmade with love!</h3>
           </a>
         </div>
