--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -11,13 +11,13 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container h-100">
-        <div class="row h-100">
-            <div class="col-6 my-auto mx-auto">
-                <h1 class ="display-4 logo-txt text-light">Special offers until end of March 2021!</h1>
+    <div class="container h-100 mt-5">
+        <div class="row h-50 my-auto">
+            <div class="col-8 mt-5 mb-0 mx-auto">
+                <h3 class =" display-4 logo-txt text-light">Special offers until end of March 2021!</h3>
             </div>
-            <div class="col-12 mx-auto text-center">
-                <a href="{% url 'products' %}" class="btn btn-light">Shop Now!</a>
+            <div class="col-10 offset-1 text-center">
+                <a href="{% url 'products' %}" class="btn btn-light btn-lg">Shop Now!</a>
             </div>
         </div>
     </div>
