--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -23,7 +23,15 @@
                 {% for product in products %}
                 <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                     <div class="card h-100">
-                        <img src="/media/{{ product.image}}" class="card-img-top img-fluid" alt="{{ product.name }}">
+                        {% if product.image %}
+                        <a href="{% url 'product_detail' product.id %}">
+                            <img src="/media/{{ product.image}}" class="card-img-top img-fluid" alt="{{ product.name }}">
+                        </a>
+                        {% else %}
+                        <a href="{% url 'product_detail' product.id %}">
+                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}artwitch-noimg.jpg" alt="{{ product.name }}">
+                        </a>
+                        {% endif %}
                         <div class="card-body">
                           <h5 class="card-title">{{ product.name }}</h5>
                         </div>
