Added products search functionality

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
           </a>
         </div>
         <div class="col-lg-4 align-items-center">
-          <form class="d-flex" method="GET" action="">
+          <form class="d-flex" method="GET" action="{% url 'products' %}">
             <div class="input-group">
               <input class="form-control me-2" type="search" name= "q" placeholder="Search" aria-label="Search">
               <button class="btn btn-sm btn-outline-dark" type="submit"><i class="bi bi-search"></i>Search</button>
