--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -6,7 +6,7 @@
         </div>
     </a>
     <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0" aria-labelledby="mobile-search">
-      <form class="d-flex" method="GET" action="">
+      <form class="d-flex" method="GET" action="{% url 'products' %}">
         <div class="input-group">
           <input class="form-control me-2" type="search" name= "q" placeholder="Search" aria-label="Search">
           <button class="btn btn-sm btn-outline-dark" type="submit"><i class="bi bi-search"></i></button>
