Resized images and updated product category links

--- a/templates/includes/main-navigation.html
+++ b/templates/includes/main-navigation.html
@@ -22,12 +22,12 @@
           <a href="{% url 'products'%}?category=bags" class="dropdown-item">Bags</a>
           <a href="{% url 'products'%}?category=earrings" class="dropdown-item">Earrings</a>
           <a href="{% url 'products'%}?category=knitted" class="dropdown-item">Knitted</a>
-          <a href="{% url 'products'%}?category=bracelets" class="dropdown-item">Bracelets/a>
+          <a href="{% url 'products'%}?category=bracelets" class="dropdown-item">Bracelets</a>
         </div>
       </li>
       <li class="nav-item dropdown list-group-item border-0">
         <a class="nav-link text-dark" href="#" id="kids-link" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Toys
+          Kids
         </a>
 
         <div class="dropdown-menu border-0 text-dark" aria-labelledby="kids-link">
