--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -21,7 +21,7 @@
             </div>
             <div class="row">
                 {% for product in products %}
-                <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 my-2">
                     <div class="card h-100">
                         {% if product.image %}
                         <a href="{% url 'product_detail' product.id %}">
