--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -22,7 +22,7 @@
             <div class="row">
                 {% for product in products %}
                 <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 my-2">
-                    <div class="card h-100">
+                    <div class="card h-100 px-3">
                         {% if product.image %}
                         <a href="{% url 'product_detail' product.id %}">
                             <img src="/media/{{ product.image}}" class="card-img-top img-fluid" alt="{{ product.name }}">
