--- a/templates/includes/main-navigation.html
+++ b/templates/includes/main-navigation.html
@@ -7,9 +7,9 @@
         </a>
 
         <div class="dropdown-menu border-0 text-dark" aria-labelledby="all-products">
-          <a href="" class="dropdown-item">By Price</a>
-          <a href="" class="dropdown-item ">By Rating</a>
-          <a href="" class="dropdown-item ">By Category</a>
+          <a href="{% url 'products'%}?sort=price&direction=asc" class="dropdown-item">By Price</a>
+          <a href="{% url 'products'%}?sort=rating&direction=desc" class="dropdown-item ">By Rating</a>
+          <a href="{% url 'products'%}?sort=category&direction=asc" class="dropdown-item ">By Category</a>
           <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
         </div>
       </li>
