--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -34,11 +34,12 @@
                         <p class="lead mb-0 text-left font-weight-bold">€{{ product.price }}</p>
                         {% if product.category %}
                         <p class="small mt-1 mb-0">
-                            <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
+                            <a class="text-reset" href="{% url 'products' %}?category={{ product.category.name }}">
                                 <i class="bi bi-tag-fill"></i>{{ product.category.name }}
                             </a>
                         </p>
                         {% endif %}
+                        <p class="mt-3">{{ product.description }}</p>
                         {% if product.rating %}
                             <small class="text-muted"><i class="bi bi-star-fill"></i>{{ product.rating }} / 5</small>
                         {% else %}
