--- a/templates/base.html
+++ b/templates/base.html
@@ -73,11 +73,11 @@
                 </div>
               </li>
               <li class="list-group-item flex-fill border-0">
-                <a class="font-weight-bold text-dark nav-link" href="">
+                <a class="font-weight-bold text-dark nav-link" href="{% url 'view_bag' %}">
                     <div class="text-center">
                       <span><i class="bi bi-cart-fill"></i></span>
                       <p class="my-0">
-                            $0.00
+                            €0.00
                       </p>
                     </div>
                 </a>
