--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -37,7 +37,7 @@
 </li>
 
 <li class="list-inline-item">
-      <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none px-1" href="">
+      <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none px-1" href="{% url 'view_bag' %}">
           <div class="text-center text-dark">
               <div><i class="bi bi-cart-fill"></i></div>
               <p class="my-0">
