Added bag app context and delivery calculations logic

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,7 +12,7 @@
 
 {% block content %}
     <div class="container h-100 mt-5">
-        <div class="row h-50 my-auto">
+        <div class="row h-50 my-auto pt-5">
             <div class="col-8 mt-5 mb-0 mx-auto">
                 <h3 class =" display-4 logo-txt text-light">Special offers until end of March 2021!</h3>
             </div>
