--- a/templates/base.html
+++ b/templates/base.html
@@ -94,6 +94,11 @@
             {% include 'includes/main-navigation.html' %}
         </nav>
       </div>
+      <div class="row">
+          <div class="col bg-dark text-white text-center">
+              <h4 class="my-1">All orders above €{{ free_delivery_threshold }} have free delivery!</h4>
+          </div>
+      </div>
     </header>
     
     {% if messages %}
