--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -29,8 +29,8 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
-                    <div class="product-details-container mb-5 mt-md-5">
-                        <p class="mb-0">{{ product.name }}</p>
+                    <div class="mb-5 mt-md-5">
+                        <h5 class="mb-0">{{ product.name }}</h5>
                         <p class="lead mb-0 text-left font-weight-bold">€{{ product.price }}</p>
                         {% if product.category %}
                         <p class="small mt-1 mb-0">
@@ -45,6 +45,35 @@
                         {% else %}
                             <small class="text-muted">No Rating</small>
                         {% endif %}
+                    </div>
+                    <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+                        {% csrf_token %}
+                        <div class="row">
+                            <div class="col-12">
+                                <p class="mt-3"><strong>Quantity:</strong></p>
+                                <div class="form-group w-25 mb-3 mb-md-5">
+                                    <div class="input-group">
+                                        <input class="form-control qty_input" type="number"
+                                            name="quantity" value="1" min="1" max="99"
+                                            data-item_id="{{ product.id }}"
+                                            id="id_qty_{{ product.id }}">
+                                    </div>
+                                </div>
+                            </div>
+    
+                            <div class="col-12 mt-3 mt-lg-1">
+                                <input type="submit" class="btn btn-lg btn-outline-dark me-3 mb-5 mb-lg-0" value="Add to Bag">
+                                <a href="{% url 'products' %}" class="btn btn-lg btn-outline-dark">
+                                    <span>
+                                        <i class="bi bi-cart-fill"></i>
+                                    </span>
+                                    <span >Continue shopping</span>
+                                </a>
+                            </div>
+                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                        </div>
+                    </form>
+                </div>
+                
             </div>
-        </div>
 {% endblock %}
