--- a/templates/base.html
+++ b/templates/base.html
@@ -77,7 +77,11 @@
                     <div class="text-center">
                       <span><i class="bi bi-cart-fill"></i></span>
                       <p class="my-0">
-                            €0.00
+                        {% if grand_total %}
+                          €{{ grand_total|floatformat:2 }}
+                        {% else %}
+                          €0.00
+                        {% endif %}
                       </p>
                     </div>
                 </a>
