--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -41,7 +41,11 @@
           <div class="text-center text-dark">
               <div><i class="bi bi-cart-fill"></i></div>
               <p class="my-0">
-                $0.00
+                {% if grand_total %}
+                €{{ grand_total|floatformat:2 }}
+                {% else %}
+                €0.00
+                {% endif %}
               </p>
           </div>
       </a>
