Added toast template

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -31,6 +31,13 @@ body {
     z-index: -1;
 }
 
+.message-container {
+    position: fixed;
+    top: 80px;
+    right: 20px;
+    z-index: 6666677777;
+}
+
 @media (min-width: 1200px) {
     .container {
       max-width: 80%;
